Fix some header margins on mobile

--- a/src/styles/_posts.scss
+++ b/src/styles/_posts.scss
@@ -431,7 +431,15 @@ body.search {
         }
 
         &.header-location-top > header > .container {
-            padding-top: 3rem;
+            padding-top: 1rem;
+
+            @media (min-width: 768px) {
+                padding-top: 2rem;
+            }
+
+            @media (min-width: 992px) {
+                padding-top: 3rem;
+            }
         }
 
         &.header-style-standard.header-location-bottom {
